--- a/Classes/View/Conferences/Tracks/XBConferenceTrackCell.xib
+++ b/Classes/View/Conferences/Tracks/XBConferenceTrackCell.xib
@@ -7,7 +7,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" verticalHuggingPriority="1000" verticalCompressionResistancePriority="1" selectionStyle="none" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="XBConferenceTrackCell" rowHeight="62" id="aCa-a0-1qD" customClass="XBConferenceTrackCell">
+        <tableViewCell contentMode="scaleToFill" verticalHuggingPriority="1000" verticalCompressionResistancePriority="1" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="XBConferenceTrackCell" rowHeight="62" id="aCa-a0-1qD" customClass="XBConferenceTrackCell">
             <rect key="frame" x="0.0" y="0.0" width="320" height="62"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="aCa-a0-1qD" id="FWd-fx-AhH">
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="18"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                        <nil key="highlightedColor"/>
+                        <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </label>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aI0-bf-xof" customClass="DTAttributedTextContentView">
                         <rect key="frame" x="20" y="41" width="247" height="12"/>
