--- a/Classes/View/Menu/XBConferenceCell.xib
+++ b/Classes/View/Menu/XBConferenceCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="5053" systemVersion="13C64" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="5056" systemVersion="13C64" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment defaultVersion="1536" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
@@ -7,26 +7,45 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="XBConference" rowHeight="40" id="09H-Yb-FxY" customClass="XBConferenceCell">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="blue" indentationWidth="10" reuseIdentifier="XBConference" rowHeight="40" id="09H-Yb-FxY" customClass="XBConferenceCell">
             <rect key="frame" x="0.0" y="0.0" width="320" height="40"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="09H-Yb-FxY" id="8ed-ao-cDp">
-                <rect key="frame" x="0.0" y="0.0" width="287" height="39"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="39"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" fixedFrame="YES" text="Menu Item" lineBreakMode="tailTruncation" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="Thb-uZ-Gwn">
-                        <rect key="frame" x="43" y="2" width="199" height="38"/>
+                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" misplaced="YES" text="Menu Item" lineBreakMode="tailTruncation" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="Thb-uZ-Gwn">
+                        <rect key="frame" x="43" y="11" width="257" height="17"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES"/>
                         <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="16"/>
                         <color key="textColor" red="0.69019607839999997" green="0.69019607839999997" blue="0.69019607839999997" alpha="1" colorSpace="calibratedRGB"/>
                         <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </label>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="conference_icon_placeholder.png" translatesAutoresizingMaskIntoConstraints="NO" id="57C-zf-17R">
+                        <rect key="frame" x="10" y="8" width="24" height="24"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="24" id="Mal-ML-sll"/>
+                            <constraint firstAttribute="width" constant="24" id="UBj-96-yKQ"/>
+                        </constraints>
+                    </imageView>
                 </subviews>
+                <constraints>
+                    <constraint firstAttribute="centerY" secondItem="Thb-uZ-Gwn" secondAttribute="centerY" id="DbW-qL-W1v"/>
+                    <constraint firstAttribute="trailing" secondItem="Thb-uZ-Gwn" secondAttribute="trailing" constant="20" id="KnA-zm-vDV"/>
+                    <constraint firstItem="57C-zf-17R" firstAttribute="leading" secondItem="8ed-ao-cDp" secondAttribute="leading" constant="10" id="Ko8-k3-wew"/>
+                    <constraint firstAttribute="centerY" secondItem="57C-zf-17R" secondAttribute="centerY" id="M2d-w2-KX3"/>
+                    <constraint firstItem="Thb-uZ-Gwn" firstAttribute="leading" secondItem="57C-zf-17R" secondAttribute="trailing" constant="9" id="wtu-cQ-77m"/>
+                </constraints>
             </tableViewCellContentView>
             <color key="backgroundColor" red="0.1333333333" green="0.1333333333" blue="0.1333333333" alpha="1" colorSpace="calibratedRGB"/>
             <connections>
+                <outlet property="iconImageView" destination="57C-zf-17R" id="h9Z-8a-nGw"/>
                 <outlet property="titleLabel" destination="Thb-uZ-Gwn" id="Mzz-1f-VNe"/>
             </connections>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="conference_icon_placeholder.png" width="24" height="24"/>
+    </resources>
 </document>
